crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__v_show__basic_v_show.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "get_compiled_string(r#\"<div v-show=\"foo\">hello</div>\"#)"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(`<div><div${((_ctx.foo) ? "" : " style=\"display: none;\"")}>hello</div></div>`)
}
